needs local x509 cert to bootstrap

--- a/cluster/nodes/templates/base.tftpl.yaml
+++ b/cluster/nodes/templates/base.tftpl.yaml
@@ -22,6 +22,8 @@ cluster:
       - ${service_cidr}
 machine:
   features:
+    hostDNS:
+      forwardKubeDNSToHost: true
     kubePrism:
       enabled: true
       port: 7445
