--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 #!/bin/sh
 
-export KUBECONFIG=cluster/.kube/config
-export TALOSCONFIG=cluster/.talos/config
+export KUBECONFIG=infrastructure/.kube/config
+export TALOSCONFIG=infrastructure/.talos/config
