ssl certificates in cloud emulation

--- a/infrastructure/cloud/templates/haproxy.tftpl.cfg
+++ b/infrastructure/cloud/templates/haproxy.tftpl.cfg
@@ -23,10 +23,10 @@ resolvers cloud
 frontend cloud
   option httplog
   bind *:80
-  # bind *:443 ssl crt /usr/local/etc/ssl/certs/tls.pem alpn http/1.1 ssl-min-ver TLSv1.2
-  # http-request set-var(txn.hostname) hdr(host),lower
-  # log-format "%T %ci %ST %HM %[var(txn.hostname)]%HU"
-  # http-request redirect scheme https unless { ssl_fc }
+  bind *:443 ssl crt /usr/local/etc/ssl/certs/tls.pem alpn http/1.1 ssl-min-ver TLSv1.2
+  http-request set-var(txn.hostname) hdr(host),lower
+  log-format "%T %ci %ST %HM %[var(txn.hostname)]%HU"
+  http-request redirect scheme https unless { ssl_fc }
   use_backend cloud
 
 backend cloud
