s3 and ui routing for minio in "cloud"

--- a/infrastructure/cloud/templates/haproxy.tftpl.cfg
+++ b/infrastructure/cloud/templates/haproxy.tftpl.cfg
@@ -30,7 +30,7 @@ frontend cloud
   use_backend cloud
 
 backend cloud
-  # http-request do-resolve(txn.dst,cloud,ipv4) hdr(host),lower,map(/usr/local/etc/haproxy/hosts.map)
-  # http-request set-dst-port hdr(host),lower,map(/usr/local/etc/haproxy/ports.map)
-  # http-request set-dst var(txn.dst)
+  http-request do-resolve(txn.dst,cloud,ipv4) hdr(host),lower,map(/usr/local/etc/haproxy/hosts.map)
+  http-request set-dst-port hdr(host),lower,map(/usr/local/etc/haproxy/ports.map)
+  http-request set-dst var(txn.dst)
   server clear 0.0.0.0:0
