sync local manifests to flux bucket

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ CLOUD_HOSTNAME="cloud.test"
 
 TF_VAR_local_hostname="${LOCAL_HOSTNAME}"
 TF_VAR_cloud_hostname="${CLOUD_HOSTNAME}"
+
+S3_ACCESS_KEY_ID="minioadmin"
+S3_SECRET_ACCESS_KEY="minioadmin"
+
+LOCAL_CA_CERT="/path/to/local-ca.pem"
+
+TF_VAR_local_ca_cert="${LOCAL_CA_CERT}"
