bridge the local web load balancer

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,7 @@ S3_ACCESS_KEY_ID="minioadmin"
 S3_SECRET_ACCESS_KEY="minioadmin"
 
 LOCAL_CA_CERT="/path/to/local-ca.pem"
+LOCAL_CA_KEY="/path/to/local-ca-key.pem"
 
 TF_VAR_local_ca_cert="${LOCAL_CA_CERT}"
+TF_VAR_local_ca_key="${LOCAL_CA_KEY}"
