--- a/manifests/infrastructure/ingress/base/bitnami.contour.helm-release.yaml
+++ b/manifests/infrastructure/ingress/base/bitnami.contour.helm-release.yaml
@@ -7,7 +7,7 @@ spec:
   chart:
     spec:
       chart: contour
-      version: 18.1.1
+      version: 17.1.1
       sourceRef:
         kind: HelmRepository
         name: bitnami
@@ -17,3 +17,8 @@ spec:
         nodePorts:
           http: 30080
           https: 30443
+    configInline:
+      gateway:
+        gatewayRef:
+          name: web
+          namespace: config-ingress
