--- a/manifests/infrastructure/ingress/base/kustomization.yaml
+++ b/manifests/infrastructure/ingress/base/kustomization.yaml
@@ -3,5 +3,5 @@ namespace: infra-ingress
 resources:
   - ../namespace.yaml
   - ../helm-repositories
-  - bitnami.contour.helm-release.yaml
+  - envoyproxy.gateway-helm.helm-release.yaml
   - jetstack.cert-manager.helm-release.yaml
