--- a/manifests/configurations/ingress/base/web.gateway.yaml
+++ b/manifests/configurations/ingress/base/web.gateway.yaml
@@ -3,7 +3,7 @@ apiVersion: gateway.networking.k8s.io/v1beta1
 metadata:
   name: web
 spec:
-  gatewayClassName: contour
+  gatewayClassName: envoy-gateway
   listeners:
     - name: http
       protocol: HTTP
