--- a/manifests/infrastructure/ingress/base/haproxytech.kubernetes-ingress.helm-release.yaml
+++ b/manifests/infrastructure/ingress/base/haproxytech.kubernetes-ingress.helm-release.yaml
@@ -1,24 +1,24 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: contour
+  name: kubernetes-ingress
 spec:
   interval: 5m
   chart:
     spec:
-      chart: contour
-      version: 17.1.1
+      chart: kubernetes-ingress
+      version: 1.39.4
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: haproxytech
   values:
-    envoy:
+    controller:
       service:
         nodePorts:
           http: 30080
           https: 30443
-    configInline:
-      gateway:
-        gatewayRef:
-          name: web
-          namespace: config-ingress
+          stat: 31024
+          quic: 30443
+      defaultTLSSecret:
+        enabled: false
+      kind: DaemonSet
