--- a/manifests/infrastructure/ingress/helm-repositories/haproxytech.helm-repository.yaml
+++ b/manifests/infrastructure/ingress/helm-repositories/haproxytech.helm-repository.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: bitnami
+  name: haproxytech
 spec:
   interval: 24h
-  url: https://charts.bitnami.com/bitnami
+  url: https://haproxytech.github.io/helm-charts
