get load balancer connected to node ports with envoy

--- a/manifests/configurations/ingress/base/kustomization.yaml
+++ b/manifests/configurations/ingress/base/kustomization.yaml
@@ -2,3 +2,6 @@ namespace: config-ingress
 
 resources:
   - ../namespace.yaml
+  - ingress.envoyproxy.yaml
+  - ingress.gatewayclass.yaml
+  - ingress.gateway.yaml
