--- a/manifests/configurations/ingress/local/kustomization.yaml
+++ b/manifests/configurations/ingress/local/kustomization.yaml
@@ -3,4 +3,4 @@ namespace: config-ingress
 resources:
   - ../base
   - ingress-tls-ca.external-secret.yaml
-  - ingress.cluster-issuer.yaml
+  - ingress.issuer.yaml
