--- a/manifests/environments/local/config-secrets.kustomization.yaml
+++ b/manifests/environments/local/config-secrets.kustomization.yaml
@@ -17,4 +17,5 @@ spec:
     - name: infra-secrets
   postBuild:
     substitute:
+      local_hostname: local.test
       secrets_hostname: secrets.cloud.test
