--- a/manifests/infrastructure/ingress/base/jetstack.cert-manager.helm-release.yaml
+++ b/manifests/infrastructure/ingress/base/jetstack.cert-manager.helm-release.yaml
@@ -7,10 +7,12 @@ spec:
   chart:
     spec:
       chart: cert-manager
-      version: 1.14.5
+      version: 1.15.1
       sourceRef:
         kind: HelmRepository
         name: jetstack
   values:
     installCRDs: true
     clusterResourceNamespace: config-ingress
+    extraArgs:
+      - --enable-gateway-api
